# Praca_inzynierska

./: .gitignore  README.md  secrets.toml  streamlit.py
praca-inzynierska/: .gitignore  README.md  pyproject.toml  requirements.txt  session_store.db  stats.json  streamlit.py
praca-inzynierska/AutogluonModels/ag-20250105_124346/: learner.pkl  metadata.json
praca-inzynierska/AutogluonModels/ag-20250105_124945/: learner.pkl
praca-inzynierska/AutogluonModels/ag-20250118_123702/: learner.pkl
praca-inzynierska/AutogluonModels/ag-20250118_124515/: learner.pkl
praca-inzynierska/AutogluonModels/ag-20250118_130109/: learner.pkl
praca-inzynierska/AutogluonModels/ag-20250127_210736/: learner.pkl  metadata.json
praca-inzynierska/AutogluonModels/ag-20250512_143315/: learner.pkl  metadata.json
praca-inzynierska/AutogluonModels/ag-20250514_124005/: learner.pkl
praca-inzynierska/AutogluonModels/ag-20250522_142448/: learner.pkl  metadata.json
praca-inzynierska/AutogluonModels/ag-20250522_152149/: learner.pkl
praca-inzynierska/conf/base/: catalog.yml
praca-inzynierska/data/01_raw/: dataset.csv
praca-inzynierska/data/02_intermediate/: preprocessed_data.pq
praca-inzynierska/data/06_models/: model.pkl  model_with_BPM.pkl  scaler.pkl  scaler_with_BPM.pkl
praca-inzynierska/src/praca_inzynierska/: __init__.py  __main__.py  settings.py
praca-inzynierska/wandb/: latest-run
praca-inzynierska/wandb/run-20241207_182624-5yd1nffc/: run-5yd1nffc.wandb
praca-inzynierska/wandb/run-20241207_183624-7r868xfv/: run-7r868xfv.wandb
(+183 files in other folders)
